<resources>
    <string name="copyright">Erik Cavazos © 2024</string>
    <string name="blog">Blog</string>
    <string name="source_code">Source code</string>
    <string name="app_description">Lightweight, non-tracking, audios social network platform</string>
    <string name="app_full_name">Isolaatti for Android</string>
    <string name="licences">Open source licences</string>
    <string name="version">Version</string>
    <string name="app_name">Isolaatti</string>
    <string name="searchbar_hint">Search the whole network</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or_you_can_sign_up">Or you can sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="discussions">Discussions</string>
    <string name="audios">Audios</string>
    <string name="images">Images</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_comment">New comment</string>
    <string name="report">Report</string>
    <string name="close">Close</string>
    <string name="accept">Accept</string>
    <string name="no">No</string>
    <string name="need_reauth_message">Your session is not valid, please enter your credentials.</string>
    <string name="network_error">Network error occurred, it maybe is on our side. Please try again later</string>
    <string name="server_error">An error on our side has occurred.</string>
    <string name="post_options_title">Discussion options</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="comment_options">Comment options</string>
    <string name="audio_recorder">Record audio</string>
    <string name="account_not_found">Could not find any account that matches %s</string>
    <string name="dismiss">Dismiss</string>
    <string name="wrong_password">Could not sign in, password does not match</string>
    <string name="new_post">New</string>
    <string name="discussion">Discussion</string>
    <string name="add_audio">New audio</string>
    <string name="load_more">Load more</string>
    <string name="there_is_no_more_content_to_show">There is no more content to show</string>
    <string name="post">Post</string>
    <string name="add_image">Add image</string>
    <string name="what_do_you_want_to_talk_about_markdown_is_compatible_you_can_record_an_audio_if_you_want">What do you want to talk about? Markdown is compatible. You can record an audio if you want.</string>
    <string name="posted_successfully">Posted!</string>
    <string name="drafts">Drafts</string>
    <string name="report_profile">Report profile</string>
    <string name="block_profile">Block profile</string>
    <string name="sort">Sort</string>
    <string name="followers">Followers</string>
    <string name="followings">Following</string>
    <string name="following_user">Following</string>
    <string name="mutually_following">Mutually following</string>
    <string name="following_you">Following you</string>
    <string name="user_link">User link</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="go_to_followers_btn_text">Followers: %s Following: %s</string>
    <string name="thousand_suffix">K</string>
    <string name="million_suffix">M</string>
    <string name="people">People</string>
    <string name="about">About</string>
    <string name="post_will_dropped">This discussion and all related content will be dropped. Continue?</string>
    <string name="comment_will_be_dropped">This comment will be removed. Continue?</string>
    <string name="yes_continue">Yes, delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="save_snapshot">Save snapshot</string>
    <string name="comment_posted">Comment posted!</string>
    <string name="comment_failed_to_post">Comment failed to post</string>
    <string name="edit_comment">Edit comment</string>
    <string name="network_conn_lost">Network connection lost</string>
    <string name="network_conn_restored">Network connection restored</string>
    <string name="retry">Retry</string>
    <string name="not_found">The resource you are trying to load could not be found</string>
    <string name="unknown_error">An unkwnow error occurred</string>
    <string name="clap">Clap</string>
    <string name="comments">Comments</string>
    <string name="likes_info">Claps: %d</string>
    <string name="comments_info">Comments: %d</string>
    <string name="view_photo">View image</string>
    <string name="change_profile_photo">Change profile image</string>
    <string name="profile_photo">Profile image</string>
    <string name="remove_photo">Remove image</string>
    <string name="get_code_info">The first step to create an account is to provide your email address. We will send a code that you will need to enter in the next step.</string>
    <string name="send">Send</string>
    <string name="already_have_a_code">Already have a code?</string>
    <string name="code">Code</string>
    <string name="code_extended_description">
        Your account is almost there, you just have to enter the code that we sent to your email.
        \n\n
        If you can\'t see it, check your spam folder. If you still can\'t see it, wait a few minutes for the email to arrive.
    </string>
    <string name="enter_the_code_we_sent_you_by_email">Enter the code we sent you by email</string>
    <string name="email_used_when_getting_code">The email address you want to use to create this account has already been used previously.</string>
    <string name="invalid_code">The code you entered is invalid. Some reasons may be that the code is  misspelled or it has already expired.</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="codes_sent_limit_reached">It is not possible to send more codes, you have reached the limit. Contact the administrator.</string>
    <string name="loading">Loading...</string>
    <string name="unique_username">Unique username</string>
    <string name="display_name">Display name</string>
    <string name="create_a_password">Create a fairly strong password</string>
    <string name="let_s_make_your_account">Let\'s make your account</string>
    <string name="before_making_your_account_please_read_these_legal_terms">Before making your account, please read and accept these legal terms. By continuing you are stating that you have read and accepted both.</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="username_invalid_feedback">Username is not available or is invalid</string>
    <string name="password_invalid_feedback">Password must be at least 8 characters long</string>
    <string name="display_name_invalid_feedback">Please provide a name. This does not have to be unique and can be your real name or not.</string>
    <string name="validation_error">Validation error</string>
    <string name="email_used">Email is in use already</string>
    <string name="upload_a_picture">Upload a picture</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="upload_photo">Upload picture</string>
    <string name="delete_images_dialog_message">Remove %d images?</string>
    <string name="selected_images_count">Images selected: %d</string>
    <string name="picture_name">Picture name</string>
    <string name="audio_options">Audio options</string>
    <string name="yes_discard_image">Yes, discard image</string>
    <string name="discard_image">Discard image?</string>
    <string name="deleting_please_wait">Deleting, please wait…</string>
    <string name="markdown">Markdown</string>
    <string name="preview">Preview</string>
    <string name="add_image_here">Add image here</string>
    <string name="choose_image">Choose image</string>
    <string name="url">Url</string>
    <string name="text">Text</string>
    <string name="insert_url">Insert url</string>
    <string name="enlarge_text_box">Enlarge text box</string>
    <string name="create_a_new_discussion">Create a new discussion</string>
    <string name="edit_profile">Edit profile</string>
    <string name="remove_image_message_confirmation">Remove image? This will not delete your image, but only unset it as profile image</string>
    <string name="description">Description</string>
    <string name="go_to_account_settings">Go to account settings</string>
    <string name="go_to_feed_settings">Go to feed settings</string>
    <string name="feed_settings_card_description">This is the place to take control over what you see on your feed. These settings affect your account, not only this device.</string>
    <string name="feed_settings">Feed settings</string>
    <string name="go_to_privacy_settings">Go to privacy settings</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="privacy_settings_card_description">Set how other people see you on Isolaatti. Hide or show information</string>
    <string name="qr_code">QR Code</string>
    <string name="squads">Squads</string>
    <string name="current_sessions">Current sessions</string>
    <string name="log_out">Log out</string>
    <string name="session_description">A session is what keeps your device able to connect to Isolaatti server without you entering your credential each time.</string>
    <string name="change_password">Change password</string>
    <string name="password_description">A password allows you to sign in securely. Keep this password safe.</string>
    <string name="sessions">Sessions</string>
    <string name="sessions_selected_count">Sessions selected: %d</string>
    <string name="delete_sessions">Delete sessions</string>
    <string name="delete_sessions_conf_dialog_message">The selected sessions will become invalid, sign out those devices.</string>
    <string name="current">Current</string>
    <string name="sign_out_all_sessions">Sign out all sessions</string>
    <string name="previous">Previous</string>
    <string name="sign_out_this_device">Sign out this device</string>
    <string name="continuar">Continue</string>
    <string name="password_req">Password must contain at least 8 characters an have the following: 1–9, a-z, A-Z, special character.</string>
    <string name="changing_password">Changing password…</string>
    <string name="recover_password">Recover password</string>
    <string name="old_password_not_correct">Password not changed, old password did not match. If you don\'t remember your password, you can always recover it.</string>
    <string name="new_password_is_invalid">New password is invalid. Please check it meets the requirements</string>
    <string name="rename">Rename</string>
    <string name="set_as_profile_audio">Set as profile audio</string>
    <string name="record_new_audio">Record new audio</string>
    <string name="select_from_existing">Select from existing</string>
    <string name="audio_attachment">Audio attachment</string>
    <string name="remove">Remove</string>
    <string name="select_audio">Select audio</string>
    <string name="delete_audio_message">Do you really want to remove this audio? Discussions with this audio linked will still be pointing to it.</string>
    <string name="delete_audio_title">Remove audio?</string>
    <string name="push_notifications_dialog_title">Push notifications</string>
    <string name="push_notifications_dialog_message">Receive notifications to stay informed about your profile activity</string>
</resources>