<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/about"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="@color/on_surface"
            app:titleCentered="true"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            style="@style/Widget.Material3.CardView.Elevated">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/toolbar_text"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:layout_marginTop="24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_description"
                    android:layout_marginHorizontal="24dp"
                    android:textAlignment="center"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_margin="16dp"
                    style="@style/Widget.Material3.CardView.Filled">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="16dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/app_full_name"
                            android:layout_marginHorizontal="24dp"
                            android:layout_marginTop="24dp"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/copyright"
                            android:layout_marginHorizontal="24dp"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                        <Button
                            android:id="@+id/terms_buton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_and_conditions"
                            style="@style/Widget.Material3.Button.TextButton"/>
                        <Button
                            android:id="@+id/privacy_policy_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/privacy_policy"
                            style="@style/Widget.Material3.Button.TextButton"/>
                        <Button
                            android:id="@+id/source_code_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/source_code"
                            style="@style/Widget.Material3.Button.TextButton"/>
                        <Button
                            android:id="@+id/blog_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/blog"
                            style="@style/Widget.Material3.Button.TextButton"/>
                        <Button
                            android:id="@+id/open_source_licences"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/licences"
                            style="@style/Widget.Material3.Button.TextButton"/>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>





        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>